third_party/move/move-compiler-v2/tests/checking/naming/assert_one_arg.exp

Diagnostics:
error: undeclared `y`
  ┌─ tests/checking/naming/assert_one_arg.move:5:22
  │
5 │         assert!(x != y);
  │                      ^
