third_party/move/move-compiler-v2/tests/checking/naming/assert_one_arg.move
module 0x42::M {
    fun foo(x: &mut u64) {
        assert!(false);
        assert!(0 != 1);
        assert!(x != y);
    }
}
